fix navbar-brand wrapping on mobile chrome for some reason

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,7 @@ h2 {
 }
 .navbar-brand {
   font-size: 1.2rem;
+  white-space: nowrap;
 }
 .navbar-custom {
   background-color: #333;
